--- a/src/theme/misc.scss
+++ b/src/theme/misc.scss
@@ -203,6 +203,11 @@ img.network-tree {
     }
 }
 
+/* Github actions success/failure indicator */
+.octicon-check-circle-fill {
+    color: $text-green-color !important;
+}
+
 /* Various Buttons: "Code" dropdown links, etc */
 .UnderlineNav-item {
     color: inherit !important;
