update links theme in code and  PR toolbar background #243

--- a/src/theme/code.scss
+++ b/src/theme/code.scss
@@ -26,6 +26,10 @@
     color: #c678dd !important;
 }
 
+.pl-corl {
+    color: #61afef !important;
+}
+
 .pl-e,
 .pl-en {
     color: #61afef !important;
