--- a/src/theme/discussions.scss
+++ b/src/theme/discussions.scss
@@ -186,7 +186,7 @@ body {
         border-color: $border-color !important;
     }
     .diffbar {
-        background-color: $tag-bg-color !important;
+        background-color: transparent !important;
 
         .stale-files-tab {
             background-color: $bg-color !important;
