--- a/src/theme/organization.scss
+++ b/src/theme/organization.scss
@@ -29,7 +29,6 @@
 
 .menu-heading {
     background-color: $head-bg !important;
-    color: inherit !important;
 }
 
 .project-header {
@@ -212,4 +211,19 @@
 .pricing-matrix-column-tier {
     background-color: $bg-color !important;
     color: $text-color !important;
+}
+
+.invite-team-member-list {
+    border: 1px solid $border-color !important;
+    border-bottom: 1px solid $border-color !important;
+    .team-row-header {
+        background: $dropdown-bg !important;
+    }
+    .team-name {
+        color: $text-color !important;
+    }
+}
+
+.add-member-team-list .team:first-child{
+    border-top: 0px solid $border-color !important;
 }
