Fix selected notification background color

--- a/src/theme/notifications.scss
+++ b/src/theme/notifications.scss
@@ -50,3 +50,10 @@ li.notifications-list-item:hover,
         text-decoration: none;
     }
 }
+
+li.notifications-list-item.navigation-focus {
+    label {
+        background-color: transparent !important;
+    }
+    background-color: lighten($comment-bg, 1%) !important;
+}
