fix several issues (#271)
* Fix selected notification background color

* added styling around ".js-jump-to-badge"

* Fix mono text in box header

* Change The Background Of The Languages Indicators  (#269)

* Update "Languages" background

* version+

Co-authored-by: IamCathal <cathalsocallaghan@gmail.com>
Co-authored-by: Takahisa Hayashi <t-hayashi@unimat-sc.co.jp>
Co-authored-by: Jimmy <jiaming0708@gmail.com>
Co-authored-by: Brendan Leu <banakin9@gmail.com>

--- a/src/theme/layout.scss
+++ b/src/theme/layout.scss
@@ -384,6 +384,13 @@ body {
     .header-search-current .jump-to-field-active {
         color: $text-color !important;
     }
+
+    .js-jump-to-badge-search-text-default,
+    .js-jump-to-badge-search-text-global,
+    .js-jump-to-badge-jump {
+        color: $text-color !important;
+    }
+
     .code-list .code-list-item + .code-list-item {
         border-color: $border-color !important;
     }
@@ -434,6 +441,9 @@ body {
     .Box-header {
         background-color: $dropdown-bg !important;
         border-color: $border-color !important;
+        .text-mono{
+            background-color: $dropdown-bg !important;
+        }
     }
     .conversation-list-heading {
         border-color: $border-color !important;
