--- a/src/theme/discussions.scss
+++ b/src/theme/discussions.scss
@@ -277,11 +277,20 @@ body {
     .Label--gray-darker {
         color: $text-color !important;
     }
-}
 
-.AvatarStack-body {
-    background-color: transparent !important;
-    .avatar {
+    .AvatarStack-body {
+        background-color: transparent !important;
+        .avatar {
+            background-color: transparent !important;
+        }
+    }
+
+    tab-container,
+    file-attachment {
+        background-color: transparent !important;
+    }
+    
+    .write-content {
         background-color: transparent !important;
     }
 }
