update misc.css to fix color around dismiss button.

--- a/src/theme/misc.scss
+++ b/src/theme/misc.scss
@@ -173,7 +173,7 @@ img.network-tree {
 
 /* Sponsors notice | Issue-#140 */
 .js-notice .js-notice-dismiss {
-    background: $block-bg !important;
+    background: $bg-color !important;
 }
 
 /* Invite teammates | Issue-#163 */
