Fixup csv tables

--- a/src/theme/app.scss
+++ b/src/theme/app.scss
@@ -18,4 +18,5 @@
 @import 'developer.scss';
 @import 'alert.scss';
 @import 'license.scss';
+@import 'override.scss';
 @import 'extensions/!ext.scss';
