Update the background color on discussions page
So, I was checking the extension and I realized about this small transparency on the sticky header on the discussions page where the information about the files modified is shown, I fixed the transparency by setting the background color with the main background variable

--- a/src/theme/discussions.scss
+++ b/src/theme/discussions.scss
@@ -191,7 +191,7 @@ body {
         border-color: $border-color !important;
     }
     .diffbar {
-        background-color: transparent !important;
+        background-color: $bg-color !important;
 
         .stale-files-tab {
             background-color: $bg-color !important;
