adjust text meno

--- a/src/theme/layout.scss
+++ b/src/theme/layout.scss
@@ -442,7 +442,7 @@ body {
         background-color: $dropdown-bg !important;
         border-color: $border-color !important;
         .text-mono{
-            background-color: $dropdown-bg !important;
+            background-color: transparent !important;
         }
     }
     .conversation-list-heading {
