Added code to change the text color of the graph.

--- a/src/theme/profile.scss
+++ b/src/theme/profile.scss
@@ -137,3 +137,12 @@
         }
     }
 }
+
+.calendar-graph .js-calendar-graph-svg {
+    text {
+        &.wday,
+        &.month {
+            fill: $text-color !important;
+        }
+    }
+}
