--- a/src/theme/layout.scss
+++ b/src/theme/layout.scss
@@ -67,6 +67,7 @@ body {
     }
     .flash {
         background-color: $tag-bg-color !important;
+        background-image: none !important;
         color: $link-color !important;
     }
     .blankslate {
