Fixed color of signup-prompt

--- a/src/theme/organization.scss
+++ b/src/theme/organization.scss
@@ -217,6 +217,10 @@
     border: none !important;
 }
 
+.signup-prompt {
+    background-color: $tag-bg-color !important;
+}
+
 .pricing-matrix-column-tier {
     background-color: $bg-color !important;
     color: $text-color !important;
