Fixed color and bg image of signup-prompt-bg

--- a/src/theme/organization.scss
+++ b/src/theme/organization.scss
@@ -221,6 +221,11 @@
     background-color: $tag-bg-color !important;
 }
 
+.signup-prompt-bg {
+    background-color: $tag-bg-color !important;
+    background-image: none !important;
+}
+
 .pricing-matrix-column-tier {
     background-color: $bg-color !important;
     color: $text-color !important;
