Fix discussions reply header color

--- a/src/theme/discussions.scss
+++ b/src/theme/discussions.scss
@@ -296,4 +296,12 @@ body {
     .write-content {
         background-color: transparent !important;
     }
+
+    .js-timeline-marker {
+        background-color: $bg-color !important;
+    }
+
+    .clearfix {
+        background-color: $bg-color !important;
+    }
 }
