--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -71,3 +71,6 @@ $contrib-color-3: lighten($contrib-color, 15%);
 $contrib-color-4: lighten($contrib-color, 30%);
 $contrib-color-5: lighten($contrib-color, 50%);
 */
+
+// Blue stripe on unread item
+$unread-border-color: #0366d6;
