--- a/src/theme/notifications.scss
+++ b/src/theme/notifications.scss
@@ -65,3 +65,7 @@ li.notifications-list-item.navigation-focus {
     }
     background-color: lighten($comment-bg, 1%) !important;
 }
+
+div.notifications-component-dialog-modal {
+    background-color: $bg-color !important;
+}
