--- a/src/theme/organization.scss
+++ b/src/theme/organization.scss
@@ -79,9 +79,6 @@
             background-color: $bg-color !important;
             border: 1px solid $border-color !important;
         }
-        .clearfix {
-            background-color: $bg-color !important;
-        }
         .SelectMenu-closeButton:hover {
             color: $bright-text-color !important;
         }
@@ -129,7 +126,6 @@
 .select-menu-list {
     background-color: $dropdown-bg !important;
     border-color: $border-color !important;
-    
 
     .SelectMenu-message {
         background: $block-bg !important;
@@ -209,9 +205,12 @@
     border-color: $border-color !important;
 }
 
-.height-full label, .width-full label, 
-    .d-flex label, .flex-column label, 
-    .text-center label, .text-normal label{
+.height-full label,
+.width-full label,
+.d-flex label,
+.flex-column label,
+.text-center label,
+.text-normal label {
     background-color: transparent !important;
     color: $text-color !important;
 }
@@ -245,6 +244,6 @@
     }
 }
 
-.add-member-team-list .team:first-child{
+.add-member-team-list .team:first-child {
     border-top: 0px solid $border-color !important;
 }
