--- a/src/theme/layout.scss
+++ b/src/theme/layout.scss
@@ -10,7 +10,6 @@ body {
     &.page-responsive {
         .pagehead {
             background-color: $bg-color !important;
-
         }
     }
 
@@ -452,7 +451,7 @@ body {
     .Box-header {
         background-color: $dropdown-bg !important;
         border-color: $border-color !important;
-        .text-mono{
+        .text-mono {
             background-color: transparent !important;
         }
     }
@@ -463,7 +462,7 @@ body {
             background: $bg-color;
         }
     }
-    .simple-conversation-list>li {
+    .simple-conversation-list > li {
         border-color: $border-color !important;
     }
     .application-main {
@@ -495,6 +494,10 @@ body {
     }
     .file-commit-form--full {
         background-color: $bg-color !important;
+    }
+
+    .Header {
+        background-color: $head-bg !important;
     }
 }
 
