Fix incorrect background for unchanged PR lines (#340)
* Fix incorrect background for unchanged PR lines

* Fix review comment box

--- a/src/theme/misc.scss
+++ b/src/theme/misc.scss
@@ -226,6 +226,16 @@ div.p-2 div.color-bg-canvas-inset, .WorkflowJob {
     color: inherit !important;
 }
 
+/* Background for review comment box while reviewing */
+.js-inline-comments-container {
+    background-color: $bg-color !important;
+}
+
+/* Border for review comment box while reviewing */
+div.inline-comment-form {
+    border-color: $border-color !important;
+}
+
 /* Saved replies Write header */
 .js-write-tab, .js-preview-tab {
     background-color: $dropdown-bg !important;
