fix: background color of some sections (#344)
* fix: background color of some sections

* fix: text color

--- a/src/theme/elements.scss
+++ b/src/theme/elements.scss
@@ -19,6 +19,12 @@ body {
     .bg-white {
         background-color: $bg-color !important;
     }
+    .color-bg-secondary {
+        background-color: $bg-color !important;
+    }
+    .color-text-secondary {
+        color: $text-color !important;
+    }
     .pagination {
         a,
         em:focus,
@@ -169,7 +175,6 @@ body {
         border-top-color: $block-bg !important;
     }
 
-
     .Popover-message:before {
         border-bottom-color: $border-color !important;
     }
@@ -182,7 +187,6 @@ body {
         background-color: $dropdown-bg !important;
         color: $text-color !important;
     }
-
 }
 
 .cc-ext .pagehead-actions .cc-classic-cta a {
